# Formula-1

./: Anchor.toml  README.md  package-lock.json  package.json
backend/: .gitignore  requirements.txt
backend/app/: main.py
backend/app/agents/: base_agent.py  intent_classifier.py  trading_agent.py  transaction_planner.py
backend/app/api/v1/: auth.py  chat.py  (+4 more)
backend/app/core/: config.py  constants.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: dca_service.py  ethereum_service.py  transaction_service.py  vault_service.py
backend/app/utils/: __init__.py  cache.py  validation.py
backend/app/workers/: __init__.py  celery_app.py  dca_worker.py  portfolio_worker.py  price_worker.py
backend/tests/: test_ethereum.py
contracts/: NexusTrading.sol
frontend/: .gitignore  next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/hooks/: index.ts  useAsync.ts  useVaultDeployment.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/store/: authStore.ts  useChatStore.ts
hardhat/: contract_address.txt  hardhat.config.js  package-lock.json  package.json  verify-contract.js
hardhat/cache/: solidity-files-cache.json
hardhat/contracts/: NexusTrading.sol
hardhat/deployments/: mumbai-1770488206794.json
hardhat/scripts/: deploy.js
programs/dca-vault/: Cargo.toml  deploy.sh
programs/dca-vault/src/: lib.rs
programs/session-keys/: Cargo.toml
programs/session-keys/src/: lib.rs
(+40 files in other folders)
