[package]
name = "dca-vault"
version = "0.1.0"
description = "DCA (Dollar Cost Averaging) Vault Program for Solana Copilot"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dca_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
