[package]
name = "session-keys"
version = "0.1.0"
description = "Session Keys Program for delegated transaction signing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "session_keys"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
